aboutme container heigth

--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -6,7 +6,7 @@
     align-items: center;
     position: relative;
     z-index: 1;
-    height: 140vh;
+    height: 900px;
     /* clip-path: polygon(0 0, 100% 0, 100% 100%, 0 70%); */
 }
 
