--- a/styles/skills.css
+++ b/styles/skills.css
@@ -1,5 +1,5 @@
 #cl_skills {
-    padding: 0 40px 120px 40px;
+    padding: 40px 40px 120px 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
